--- a/platformio.ini
+++ b/platformio.ini
@@ -8,12 +8,14 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-
-
 [env]
 framework = arduino
 lib_ldf_mode = deep+
 lib_deps = https://github.com/tzapu/WiFiManager
+    paulstoffregen/Time@^1.6.1
+	knolleary/PubSubClient@^2.8
+	bblanchon/ArduinoJson@^6.19.4
+	adafruit/Adafruit HTU21DF Library@^1.0.5
 
 [env:esp32doit-devkit-v1]
 platform = espressif32
@@ -21,4 +23,4 @@ board = esp32doit-devkit-v1
 
 [env:d1_mini]
 platform = espressif8266
-board=d1_mini
+board = d1_mini
