--- a/platformio.ini
+++ b/platformio.ini
@@ -10,6 +10,7 @@
 
 [env]
 framework = arduino
+monitor_speed = 115200
 lib_ldf_mode = deep+
 lib_deps = https://github.com/tzapu/WiFiManager
     paulstoffregen/Time@^1.6.1
@@ -21,6 +22,6 @@ lib_deps = https://github.com/tzapu/WiFiManager
 platform = espressif32
 board = esp32doit-devkit-v1
 
-[env:d1_mini]
-platform = espressif8266
-board = d1_mini
+; [env:d1_mini]
+; platform = espressif8266
+; board = d1_mini
